nginx_balancer-one_service/ingress-resource-update.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  labels:
    app.kubernetes.io/component: controller 
  name: nginx
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: "/hello"
          pathType: Prefix
          backend:
            service:
              name: hello-app
              port:
                number: 8080
